# CMakeTests

BasicExecutable/: CMakeLists.txt  main.cpp
InstallTarget/: CMakeLists.txt  MyInstallLib.cpp  MyInstallLib.h  main.cpp  version.in.h
LibraryAndExecutable/: CMakeLists.txt  MyLib.cpp  MyLib.h  main.cpp
SharedLibraryAndExecutable/: CMakeLists.txt  MySharedLib.cpp  MySharedLib.h  main.cpp
